# rag-sample

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py  ask.py  ingest.py  main.py  requirements.txt
app/templates/: index.html
data/docs/: sample.txt
