[project]
name = "rag-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "overrides>=7.7.0",
    "pillow>=12.0.0",
    "posthog>=7.0.1",
    "pybase64>=1.4.3",
    "pydantic-core>=2.41.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
]
